# sparv-sbx-emotions-kb-emoclass

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cliff.toml  pyproject.toml
.github/workflows/: check.yml  release-sent-emoclass-kb-emoclass.yml  release.yml  rolling.yml  scheduled.yml  test.yml
assets/metadata/: .gitignore
assets/small-txt/: small_export.gold.xml
examples/: .gitignore
examples/small-txt/: config.yaml
examples/small-txt/source/: small.txt
scripts/: transform_readme.py
sparv-sbx-sentence-emotional-classification-kb-emoclass/: Makefile  README.md  pyproject.toml
sparv-sbx-sentence-emotional-classification-kb-emoclass/src/sbx_sentence_emotional_classification_kb_emoclass/: __init__.py  constants.py  emotional_classifier.py  metadata.yaml
src/sbx_emotions_kb_emoclass/: __init__.py  annotations.py  constants.py  emotional_classifier.py  metadata.yaml
tests/: test_annotations.py  test_emotional_classifier.py
tests/__snapshots__/: test_annotations.ambr
