
[project]
name = "sparv-sbx-emotions-kb-emoclass"
version = "0.1.1"
description = "A sparv plugin for classificating emotions in Swedish text."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
dependencies = [
    "setfit>=1.1.3",
    "sparv>=5.3.1",
    # numpy>=1.24.4 for python 3.12 support
    # numpy < 2.0.0 for working with scikit-learn<1.3.0
    # "numpy>=1.24.4,<2.0.0",
    # scikit-learn<1.3.0 because setfit uses pickled file with this version
    # "scikit-learn>=1.2.0,< 1.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    # "Programming Language :: Python :: 3.13",  # See here: https://github.com/spraakbanken/sparv-sbx-emotions-kb-emoclass/issues/12
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
]

[project.entry-points."sparv.plugin"]
sbx_emotions_kb_emoclass = "sbx_emotions_kb_emoclass"

[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/spraakbanken/sparv-sbx-emotions-kb-emoclass"
"Bug Tracker" = "https://github.com/spraakbanken/sparv-sbx-emotions-kb-emoclass/issues"


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
    "pytest-cov>=5.0.0",
    "sparv-testing",
    "syrupy>=5.0.0",
]
metadata = [
    "sparv-sbx-metadata",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv]

[tool.uv.sources]
sparv-sbx-metadata = { git = "https://github.com/spraakbanken/sparv-sbx-metadata", tag = "v2.3.1" }
sparv-testing = { git = "https://github.com/spraakbanken/sparv-testing", tag = "v0.2.0" }

[tool.uv.build-backend]
module-name = "sbx_emotions_kb_emoclass"
source-exclude = ["/.github", "/docs"]

[tool.coverage.run]
omit = ["*/tests/*"]
