[project]
name = "sparv-sbx-sentence-emotional-classification-kb-emoclass"
version = "0.1.0"
description = "A sparv plugin for classificating emotions in Swedish text."
readme = "README.md"
requires-python = ">=3.8.1,<3.12"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
dependencies = [
    "huggingface-hub>=0.13,<0.24",
    "scikit-learn>=1.2,<1.3",
    # workaround to https://github.com/huggingface/setfit/issues/544
    "setfit>=1.0.3",
    "sparv-pipeline>=5.2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
]

[project.entry-points."sparv.plugin"]
sbx_sentence_emotional_classification_kb_emoclass = "sbx_sentence_emotional_classification_kb_emoclass"

[project.urls]
Homepage = "https://spraakbanken.gu.se"
Repository = "https://github.com/spraakbanken/sparv-sbx-emotional-classification"
"Bug Tracker" = "https://github.com/spraakbanken/sparv-sbx-emotional-classification/labels/project%3Asentence-emotional-classification--kb-emoclass"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sbx_sentence_emotional_classification_kb_emoclass"]

[tool.uv]
dev-dependencies = ["pytest-cov>=5.0.0", "pytest>=8.3.3"]
